k8s/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-pipeline-svc-canary
  labels:
    app.kubernetes.io/name: data-pipeline
    app.kubernetes.io/component: canary
    monitoring: data-pipeline
spec:
  ports: [{ name: http, port: 80, targetPort: 8080 }]
  selector: { app: data-pipeline-app }
