k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-pipeline-app
spec:
  selector:
    app: data-pipeline-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
